MBP-504 - Run server tests on TeamCity
Wrote server tests.

Done with Matthew.